add device name

--- a/ui/_attachments/templates/edit.html
+++ b/ui/_attachments/templates/edit.html
@@ -1,6 +1,11 @@
 <div class="container-fluid device-inner editing">
     <div class="form-horizontal">
-        <div class="form-group"></div>
+        <div class="form-group">
+            <label for="device_name_input" class="control-label col-md-2">Device Name</label>
+            <div class="col-md-8 col-md-offset-2">
+                <input type="text" name="device_name_input" id="device_name_input" placeholder="Device Name" class="form-control">
+            </div>
+        </div>
         <div class="form-group"></div>
         <div class="form-group"></div>
         <div class="form-group"></div>
