--- a/ui/_attachments/templates/edit.html
+++ b/ui/_attachments/templates/edit.html
@@ -6,14 +6,40 @@
                 <input type="text" name="device_name_input" id="device_name_input" placeholder="Device Name" class="form-control">
             </div>
         </div>
-        <div class="form-group"></div>
-        <div class="form-group"></div>
-        <div class="form-group"></div>
-        <div class="form-group"></div>
-        <div class="form-group"></div>
-        <div class="form-group"></div>
-        <div class="form-group"></div>
-        <div class="form-group"></div>
-        <div class="form-group"></div>
+        
+        <div class="form-group">
+            
+        </div>
+        
+        <div class="form-group">
+            
+        </div>
+        
+        <div class="form-group">
+            
+        </div>
+        
+        <div class="form-group">
+            
+        </div>
+        
+        <div class="form-group">
+            
+        </div>
+        
+        <div class="form-group">
+            
+        </div>
+        
+        <div class="form-group">
+            
+        </div>
+        
+        <div class="form-group">
+            
+        </div>
+        <div class="form-group">
+            
+        </div>
     </div>        
 </div>
