--- a/ui/_attachments/templates/edit.html
+++ b/ui/_attachments/templates/edit.html
@@ -1,4 +1,4 @@
-<div class="container-fluid device-inner editing">
+<div class="container-fluid device-inner editing <%-state%>">
     <div class="form-horizontal">
         <div class="form-group">
             <label for="device_name_input" class="control-label col-md-2">Device Name</label>
@@ -38,8 +38,9 @@
         <div class="form-group">
             
         </div>
-        <div class="form-group">
-            
-        </div>
-    </div>        
+    </div>
+    <div class="form-group">
+        <button class="btn btn-primary save-button col-md-4" type="button">Save</button>
+        <button class="btn btn-default cancel-button col-md-4 col-md-offset-2" type="button">Cancel</button>
+    </div>
 </div>
