--- a/ui/_attachments/templates/edit.html
+++ b/ui/_attachments/templates/edit.html
@@ -3,40 +3,43 @@
         <div class="form-group">
             <label for="device_name_input" class="control-label col-md-2">Device Name</label>
             <div class="col-md-8 col-md-offset-2">
-                <input type="text" name="device_name_input" id="device_name_input" placeholder="Device Name" class="form-control">
+                <input type="text" name="device_name_input" id="device_name_input" value="<%-device_name%>" class="form-control">
             </div>
         </div>
-        
+
         <div class="form-group">
-            
+            <label for="edit_owner_input" class="control-label col-md-2">Owner</label>
+            <div class="col-md-8 col-md-offset-2">
+                <input type="text" name="edit_owner_input" id="edit_owner_input" value="<%-name%>" class="form-control">
+            </div>
         </div>
-        
+
         <div class="form-group">
-            
+
         </div>
-        
+
         <div class="form-group">
-            
+
         </div>
-        
+
         <div class="form-group">
-            
+
         </div>
-        
+
         <div class="form-group">
-            
+
         </div>
-        
+
         <div class="form-group">
-            
+
         </div>
-        
+
         <div class="form-group">
-            
+
         </div>
-        
+
         <div class="form-group">
-            
+
         </div>
     </div>
     <div class="form-group">
