--- a/ui/_attachments/templates/edit.html
+++ b/ui/_attachments/templates/edit.html
@@ -28,7 +28,15 @@
         </div>
 
         <div class="form-group">
-
+            <label for="device_notification_select">Notification Service</label>
+            <div class="col-md-8 col-md-offset-2">
+                <select name="device_notification_select" id="device_notification_select" class="form-control">
+                    <option value="email" <%(notification_service === "email") ? print("selected") : print("")%>>Email</option>
+                    <option value="phone" <%(notification_service === "phone") ? print("selected") : print("")%>>SMS</option>
+                    <option value="growl" <%(notification_service === "growl") ? print("selected") : print("")%>>Growl</option>
+                    <option value="twitter" <%(notification_service === "twitter") ? print("selected") : print("")%>>Twitter</option>
+                </select>
+            </div>
         </div>
 
         <div class="form-group">
