--- a/ui/_attachments/templates/edit.html
+++ b/ui/_attachments/templates/edit.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="form-group">
-            <label for="device_notification_select">Notification Service</label>
+            <label for="device_notification_select" class="control-label col-md-2">Notification Service</label>
             <div class="col-md-8 col-md-offset-2">
                 <select name="device_notification_select" id="device_notification_select" class="form-control">
                     <option value="email" <%(notification_service === "email") ? print("selected") : print("")%>>Email</option>
