--- a/ui/_attachments/templates/pending.html
+++ b/ui/_attachments/templates/pending.html
@@ -51,9 +51,9 @@
         </div>
 
         <div class="form-group">
-            <label for="device_name_input" class="control-label col-md-2">Owner</label>
+            <label for="edit_owner_input" class="control-label col-md-2">Owner</label>
             <div class="col-md-8 col-md-offset-2">
-                <input type="text" name="device_owner_input" id="device_owner_input" placeholder="Owner" class="form-control">
+                <input type="text" name="edit_owner_input" id="edit_owner_input" placeholder="Owner" class="form-control">
             </div>
         </div>
 
