check the state of the device, not the ui classes

--- a/ui/_attachments/templates/pending.html
+++ b/ui/_attachments/templates/pending.html
@@ -1,4 +1,4 @@
-<div class="device-inner container-fluid pending editing">
+<div class="device-inner container-fluid pending">
     <div class="row">
         <div class="col-md-2">
             <strong>MAC Address</strong>
