device UI improvements and refactoring

--- a/ui/_attachments/templates/device.html
+++ b/ui/_attachments/templates/device.html
@@ -54,7 +54,7 @@
         <div class="col-md-2">
             <strong>Port</strong>
         </div>
-        <div class="col-md-2 col-md-offset-2 port">
+        <div class="col-md-2 col-md-offset-2">
             <%-port%>
         </div>
     </div>
@@ -63,7 +63,9 @@
         <div class="col-md-2">
             <strong>Connected?</strong>
         </div>
-        <div class="col-md-2 col-md-offset-2 is_connected"></div>
+        <div class="col-md-2 col-md-offset-2">
+            <%-connected%>
+        </div>
     </div>
 
     <div class="row">
