--- a/ui/_attachments/templates/device.html
+++ b/ui/_attachments/templates/device.html
@@ -55,7 +55,7 @@
             <strong>Port</strong>
         </div>
         <div class="col-md-2 col-md-offset-2">
-            <%port()%>
+            <%-port()%>
         </div>
     </div>
 
@@ -64,7 +64,7 @@
             <strong>Connected?</strong>
         </div>
         <div class="col-md-2 col-md-offset-2">
-            <%connected()%>
+            <%-connected()%>
         </div>
     </div>
 
