--- a/ui/_attachments/templates/device.html
+++ b/ui/_attachments/templates/device.html
@@ -55,7 +55,7 @@
             <strong>Port</strong>
         </div>
         <div class="col-md-2 col-md-offset-2">
-            <%=port()%>
+            <%-port_string()%>
         </div>
     </div>
 
