--- a/ui/_attachments/templates/pending.html
+++ b/ui/_attachments/templates/pending.html
@@ -31,7 +31,7 @@
             <strong>Port</strong>
         </div>
         <div class="col-md-2 col-md-offset-2">
-            <%-port%>
+            <%-port_string()%>
         </div>
     </div>
 
