--- a/ui/_attachments/templates/home.html
+++ b/ui/_attachments/templates/home.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <div class="col-md-6">
-      <a id="home-devices-link" href="index.html/#/devices>
+      <a id="home-devices-link" href="index.html/#/devices">
         <h2>Connected Devices</h2>
         <div id="home-devices"></div>
       </a>
