add username to home

--- a/ui/_attachments/templates/home_notifications.html
+++ b/ui/_attachments/templates/home_notifications.html
@@ -4,6 +4,7 @@
         <tr>
             <th>Name</th>
             <th>Service</th>
+            <th>User Name</th>
         </tr>
     </thead>
     <tbody>
