--- a/ui/_attachments/templates/nav.html
+++ b/ui/_attachments/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+<nav class="navbar navbar-fixed-top navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
             <button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse" type="button">
